# hermes-agent

./: Loop.md  NEXT-STEP.md  docker-compose.yml  package-lock.json  toolsets.py
trader/: .env.example  .gitignore  README.md  pyproject.toml
trader/swing_trader/: __init__.py  __main__.py  analysis.py  api.py  backtest.py  brief.py  brief_telegram.py  broker_factory.py  cn_watchlist.py  config.py  confirmation.py  constants.py  dailyloop.py  datafeed.py  decision.py  earnings.py  execution.py  fund_nav.py  fundamentals.py  health.py  ibkr_broker.py  instrument_names.py  instruments.py  interfaces.py  killswitch.py  knowledge.py  knowledge_pipeline.py  kr_watchlist.py  ledger.py  llm.py  log.py  monitors.py  on_demand.py  paper_broker.py  portfolio.py  portfolio_csv.py  portfolio_draft.py  portfolio_journal.py  portfolio_reconcile.py  rag.py  (+15 more)
trader/tests/: test_analysis.py  test_api.py  test_api_analyze.py  test_api_killswitch.py  test_api_portfolio.py  test_as_of_bar.py  test_backtest.py  test_brief.py  test_broker_factory.py  test_broker_parity.py  test_cn_session.py  test_config.py  test_confirmation.py  test_dailyloop_health.py  test_dailyloop_session.py  test_datafeed.py  test_decision.py  test_e2e_paper_loop.py  test_earnings.py  test_execution.py  test_finance_bot.py  test_fund_nav.py  test_fundamentals.py  test_guardrail_audit.py  test_health.py  test_ibkr_broker.py  test_ibkr_integration.py  test_instruments.py  test_killswitch.py  test_knowledge.py  test_knowledge_pipeline.py  test_kr_watchlist.py  test_ledger.py  test_llm.py  test_log.py  test_monitors.py  (+20 more)
(+82 files in other folders)
